# XiP

./: .gitignore  LICENSE  README.md  XiP.py  XiP_GUI.py  XiP_demo.ipynb  pyproject.toml  requirements.txt  test_model.xcm  utils.py  xspec_interactive_plot.py  xspec_plot.ipynb
Data/: BKG_spec820_ARF_00001_corr.fits  BKG_spec820_RMF_00001.fits  BKG_spec820_SourceSpec_00001_corr.fits  SRC_spec820_ARF_00001_corr.fits  SRC_spec820_RMF_00001.fits  SRC_spec820_SourceSpec_00001_corr.fits  TM8_FWC_c010_mod_bkg.xcm  TM8_FWC_c010_mod_src.xcm
XiP_Notebook/: README.md  XiP.py
xip/: backend.py  plotting.py  xcm_editor.py  xspec_model_db.json
xip/profiles/: __init__.py  base.py  default.py  erosita.py  nustar.py
